--- a/Views/Mantenimiento/index.cshtml
+++ b/Views/Mantenimiento/index.cshtml
@@ -6,11 +6,11 @@
 <style>
     a:visted{
         style:none;
-        color:white;
+        color:teal;
     }
     a:link{
         style:none;
-        color:white;
+        color:teal;
     }
 </style>
 
