--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -80,6 +80,7 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+        </div>
     </div>
 
      <script src="~/js/site.js" asp-append-version="true"></script>
